<resources>
    <string name="app_name">Fatless</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_currentSession">Current Session</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_leaderBoard">Leader Board</string>
    <string name="title_profile">Profile</string>
    <string name="SaveP">Save</string>
    <string name="ageP">Age (10–99)</string>
    <string name="full_nameP">Full Name</string>
    <string name="let_us_get_to_know_youP">Let us get to know you</string>
    <string name="create_your_profileP">👤 Create Your Profile</string>
    <string name="error_profile_save">Error the name or the age invalid option</string>
    <string name="user_profile">👤 User Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="calories">Calories:</string>
    <string name="username">UserName</string>
    <string name="age_leaderbord">Age: </string>
    <string name="_99">99</string>
    <string name="_999">999</string>
    <string name="_1">1</string>
    <string name="top_10_calories_burned">🏆 Daily Top 10\n Calories Burned</string>
    <string name="_0">0</string>
    <string name="calories_burned_today">Calories Burned Today:</string>
    <string name="status">-</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User</string>
    <string name="suggested_activities">Suggested Activities</string>
    <string name="kcal">\tkcal</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="sport_name">Sport Name</string>
    <string name="min">\tmin</string>
    <string name="_30">30</string>
    <string name="burns">Burns:\t</string>
    <string name="_200">200</string>
    <string name="tkcal">\tkcal</string>
    <string name="duration_t">Duration:\t</string>
    <string name="error_height_or_weight_is_invalid_option">Error height or weight is invalid option</string>
    <string name="favorite_sports">⭐ Favorite Sports</string>
    <string name="no_favorite_sports_yet_ngo_explore_and_add_some">No favorite sports yet.\nGo explore and add some!</string>
    <string name="_00_00">00:00</string>
    <string name="calories_burned">Calories burned</string>
</resources>