<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_currentSession"
        android:icon="@drawable/currentsession"
        android:title="@string/title_currentSession"/>
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite"/>
    <item
        android:id="@+id/navigation_leaderBoard"
        android:icon="@drawable/leaderboard"
        android:title="@string/title_leaderBoard"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"/>
</menu>