<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <!-- Welcome Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/white"
            android:radius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- Welcome Message -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:id="@+id/home_ET_UserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary"/>
                </LinearLayout>


                <!-- Calories Label -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_burned_today"
                        android:textSize="16sp"
                        android:textColor="@color/gray_dark"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:id="@+id/home_LBL_CaloriesValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary"/>
                    <TextView
                        android:id="@+id/tvCalories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kcal"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary"/>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- BMI Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/white"
            android:radius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_calculator"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp" />

                <EditText
                    android:id="@+id/home_ET_Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_kg"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edittext_bg"
                    android:padding="14dp"
                    android:layout_marginBottom="12dp"/>

                <EditText
                    android:id="@+id/home_ET_Height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_cm"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edittext_bg"
                    android:padding="14dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/home_LBL_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error_height_or_weight_is_invalid_option"
                    android:visibility="invisible"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/home_BTN_CalculateBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_bmi"
                    android:backgroundTint="@color/primary"
                    android:textColor="@color/white"
                    android:layout_marginBottom="12dp"/>

                <!-- BMI Result Line -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_bmi"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="4dp"/>

                    <TextView
                        android:id="@+id/home_LBL_BMIValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary"/>
                </LinearLayout>



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Sport Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested_activities"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="4dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_RV_sportList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:clipToPadding="false"
            android:overScrollMode="never"/>

    </LinearLayout>
</ScrollView>
