<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardSport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginHorizontal="4dp"
    app:cardElevation="30dp"
    android:radius="100dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center_vertical">

        <!-- Sport Image -->
        <ImageView
            android:id="@+id/imgSport"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_rounded_bg" />

        <!-- Sport Info -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sport_LBL_SportName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/tvSportDurati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_t"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="4dp" />
                <TextView
                    android:id="@+id/sport_LBL_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="4dp" />
                <TextView
                    android:id="@+id/tvSportDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="4dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">

                <TextView
                    android:id="@+id/tvBurns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/burns"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="2dp" />
                <TextView
                    android:id="@+id/sport_LBL_SportCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_200"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="2dp" />
                <TextView
                    android:id="@+id/tvSportCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tkcal"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="2dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/sport_BTN_Favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/unfavorite_bnt_pic" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/sport_BTN_Play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/play_arrow"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
